--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
   </style>
 </head>
-<body class="flex justify-center min-h-screen items-start py-10">
+<body class="flex justify-center min-h-screen items-start py-10 px-4">
 
   <div class="w-full max-w-md">
     <h1 class="text-2xl font-semibold text-center mb-6">💵 Checks$</h1>
