--- a/index.html
+++ b/index.html
@@ -190,7 +190,13 @@
     }
 
     function saveData(salary) {
-      const data = { salary, budgets, remaining, expenses };
+      const data = { 
+        salary, 
+        budgets, 
+        remaining, 
+        expenses,
+        lastUpdated: new Date().toISOString()
+      };
       localStorage.setItem("salaryApp", JSON.stringify(data));
     }
 
